[package]
name = "proflogger"
version = "0.1.0"
edition = "2021"
authors = ["Mackenzie Gray <me@mackenziedgray.com>"]
readme = "README.md"
license = "LICENSE.md"
keywords = ["profile", "log"]
categories = ["date-and-time"]
include = ["/logdrop/", "/proc/", "/src/", "*.md"]

[dependencies]
logdrop= {path="./logdrop"}
logdrop_proc = {path="./proc"}

[dev-dependencies]
log = "0.4.21"

[lints.clippy]
complexity = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
